--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,11 +1,12 @@
 .form {
-  width: 400px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   padding: 20px;
   border: solid;
+  font-size: smaller;
 }
 
 .form label {
@@ -27,7 +28,7 @@
 }
 
 .form button {
-  width: 50%;
+  width: 70%;
   padding: 5px;
   border-radius: 5px;
   font-weight: bold;
@@ -36,4 +37,10 @@
 .form button:hover,
 .form button:focus {
   background-color: lightgreen;
+}
+
+@media screen and (min-width: 768px) {
+  .form {
+    font-size: medium;
+  }
 }
