--- a/src/components/ContactList/Contact/Contact.module.css
+++ b/src/components/ContactList/Contact/Contact.module.css
@@ -1,10 +1,18 @@
+.contact {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+}
+
 .name {
-  width: 200px;
+  width: 120px;
   overflow: hidden;
 }
 
 .number {
-  width: 100px;
+  width: 70px;
   overflow: hidden;
 }
 
@@ -12,9 +20,20 @@
   padding: 5px;
   border-radius: 5px;
   font-weight: bold;
+  font-size: inherit;
 }
 
 .delete_btn:hover,
 .delete_btn:focus {
   background-color: red;
+}
+
+@media screen and (min-width: 768px) {
+  .name {
+    width: 200px;
+  }
+
+  .number {
+    width: 150px;
+  }
 }
