--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,26 +1,18 @@
+.contacts_box {
+  width: 100%;
+}
+
 .contact_list {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
 .contact_item {
-  width: 400px;
+  width: 100%;
   display: flex;
 
   justify-content: space-between;
   align-items: center;
-}
-
-.delete_all_btn {
-  width: 200px;
-  padding: 5px;
-  font-weight: bold;
-  border-radius: 5px;
-  border: none;
-  background-color: lightcoral;
-}
-.delete_all_btn:hover,
-.delete_all_btn:focus {
-  background-color: red;
 }
