--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,10 +1,14 @@
-.view {
+.flexPage {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  gap: 10px;
   justify-content: space-between;
   align-items: center;
   padding-left: 20px;
@@ -13,8 +17,9 @@
 
 .nav {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 10px;
 }
 
 .logo {
@@ -26,9 +31,17 @@
   margin-right: 5px;
 }
 
-.flexPage {
-  height: 100vh;
+@media screen and (min-width: 768px) {
+  .header {
+    flex-direction: row;
+  }
+  .nav {
+    flex-direction: row;
+    gap: 30px;
+  }
+}
+
+.content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
